[workspace]
resolver = "2"

members = [
    "shaperglot-lib",
    "shaperglot-cli",
    "shaperglot-web",
    "shaperglot-py",
]

default-members = ["shaperglot-lib", "shaperglot-cli"]

[workspace.dependencies]
fontations = "0.1.0"
itertools = "0.13.0"
google-fonts-languages = "0.7.3"
toml = "0.8.19"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
