[workspace]
resolver = "2"

members = [
    "shaperglot-lib",
    "shaperglot-cli",
    "shaperglot-web",
    "shaperglot-py",
]

default-members = ["shaperglot-lib", "shaperglot-cli"]

[workspace.dependencies]
fontations = "0.3.0"
itertools = "0.14.0"
google-fonts-languages = "0.7.6"
toml = "0.9.5"
serde_json = { version = "1.0.142", features = ["preserve_order"] }

[workspace.lints.clippy]
uninlined_format_args = "allow"
