[package]
name = "shaperglot-cli"
version = "0.1.0"
edition = "2021"
authors = [ "The Shaperglot Authors" ]
description = "Test font files for OpenType language support"
[[bin]]
path = "src/main.rs"
name = "shaperglot"

[dependencies]
shaperglot = { path = "../shaperglot-lib", features=["colored"] }
skrifa = { workspace = true }
read-fonts = { workspace = true }
itertools = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.70"