[package]
name = "shaperglot-cli"
version = "1.0.0"
edition = "2021"
authors = ["The Shaperglot Authors"]
description = "Test font files for OpenType language support"
[[bin]]
path = "src/main.rs"
name = "shaperglot"

[dependencies]
shaperglot = { path = "../shaperglot-lib", features = ["colored"] }
fontations = { workspace = true }
itertools = { workspace = true }
clap = { version = "4.5.28", features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
