[package]
name = "shaperglot"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The Shaperglot Authors"]
description = "Test font files for OpenType language support"
homepage = "https://github.com/googlefonts/shaperglot"
repository = "https://github.com/googlefonts/shaperglot"

[lib]
path = "src/lib.rs"

[features]
default = ["skrifa"]

[dependencies]
google-fonts-languages = { workspace = true }
skrifa = { workspace = true, optional = true }
itertools = { workspace = true }
rustybuzz = "0.20.1"
serde_json = { workspace = true }
unicode-normalization = "0.1.24"
colored = { version = "3.0.0", optional = true }
unicode-properties = "0.1.3"
unicode-joining-type = "1.0.0"
indexmap = "2"
log = "0.4"
toml = { workspace = true }
serde = "1.0.215"
ambassador = "0.4.1"
