[package]
name = "shaperglot-py"
version = "1.0.0-a1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shaperglot"
crate-type = ["cdylib"]

[dependencies]
shaperglot = { path = "../shaperglot-lib" }
pyo3 = "0.22"
pythonize = "0.22.0"
