[build-system]
requires = ["maturin>=1.9.1,<2.0"]
build-backend = "maturin"

[project]
name = "shaperglot"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "shaperglot._shaperglot"
python-source = "python"

[project.optional-dependencies]
docs = ["sphinx", "sphinxcontrib-napoleon", "sphinx_rtd_theme", "myst_parser"]

[project.scripts]
shaperglot = "shaperglot.cli:main"
