[package]
name = "shaperglot-web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.95" }
console_error_panic_hook = { version = "0.1.7" }
js-sys = { version = "0.3.72" }
shaperglot = { path = "../shaperglot-lib" }
fontations = { workspace = true }
serde_json = { workspace = true }
indexmap = { version = "1.9.3", features = ["serde-1"] }
google-fonts-languages = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
