[package]
name = "shaperglot-web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.100" }
console_error_panic_hook = { version = "0.1.7" }
js-sys = { version = "0.3.77" }
shaperglot = { path = "../shaperglot-lib" }
skrifa = { workspace = true }
serde_json = { workspace = true }
indexmap = { version = "2.10.0", features = ["serde"] }
google-fonts-languages = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[lints]
workspace = true
